# FoxyEngine

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: system.hpp  utils.hpp
include/system/: ViewPanel.hpp  Window.hpp
include/utils/: FileHandler.hpp
src/: Main.cpp  main.cpp
src/system/: ViewPanel.cpp  Window.cpp
src/utils/: FileHandler.cpp
themes/: Dark_Foxy.theme
